fixed alignment and changed the colors of the page

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 #header{
     text-align: center;
     font-family: 'PT Sans', sans-serif;
-    background-color: rgb(98, 14, 39);
+    background-color:rgb(165, 84, 154);
     color: white;
     padding: 50px 0px 50px 0px;
     margin-left: auto;
